kubernetes/p2p-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: p2p
  name: p2p
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: p2p
status:
  loadBalancer: {}
